@@ -1,4 +1,5 @@
 
+	* fix issue with SSL tracker connections left in CLOSE_WAIT state
 	* defer truncating existing files until the first time we write to them
 	* fix issue when receiving a torrent with 0-sized padfiles as magnet link
 	* fix issue resuming 1.0.x downloads with a file priority 0
